--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
     <script>
         // Firebase Configuration
         const firebaseConfig = {
-            apiKey: "API_KEY",
-            authDomain: "PROJECT_ID.firebaseapp.com",
-            projectId: "PROJECT_ID",
-            storageBucket: "PROJECT_ID.appspot.com",
-            messagingSenderId: "SENDER_ID",
-            appId: "APP_ID"
+			apiKey: "AIzaSyDUO5c-1RSGpGspdAStcGmrEVb0qD0FbnU",
+			authDomain: "emsd-cef45.firebaseapp.com",
+			databaseURL: "https://emsd-cef45-default-rtdb.europe-west1.firebasedatabase.app",
+			projectId: "emsd-cef45",
+			storageBucket: "emsd-cef45.firebasestorage.app",
+			messagingSenderId: "573007211940",
+			appId: "1:573007211940:web:651a9d8785eb14a0ea2531"
         };
 
         // Initialize Firebase
