--- a/index.html
+++ b/index.html
@@ -3,85 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firebase Authentication</title>
+    <title>Check Auth State</title>
     <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js"></script>
 </head>
 <body>
-    <h1>Work Schedule Manager - Login</h1>
+    <!-- Sekcja logowania -->
+    <div id="loginSection">
+        <h2>Login</h2>
+        <form id="loginForm">
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="password" id="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+        <p id="loginError"></p>
+    </div>
 
-    <!-- Formularz rejestracji -->
-    <h2>Register</h2>
-    <form id="registerForm">
-        <input type="email" id="registerEmail" placeholder="Email" required />
-        <input type="password" id="registerPassword" placeholder="Password" required />
-        <button type="submit">Register</button>
-    </form>
-
-    <!-- Formularz logowania -->
-    <h2>Login</h2>
-    <form id="loginForm">
-        <input type="email" id="loginEmail" placeholder="Email" required />
-        <input type="password" id="loginPassword" placeholder="Password" required />
-        <button type="submit">Login</button>
-    </form>
-
-    <div id="status"></div>
+    <!-- Sekcja aplikacji -->
+    <div id="appSection" style="display: none;">
+        <h2>Welcome!</h2>
+        <button id="logoutButton">Logout</button>
+    </div>
 
     <script>
-        // Firebase Configuration
+        // Konfiguracja Firebase
         const firebaseConfig = {
-			apiKey: "AIzaSyDUO5c-1RSGpGspdAStcGmrEVb0qD0FbnU",
-			authDomain: "emsd-cef45.firebaseapp.com",
-			databaseURL: "https://emsd-cef45-default-rtdb.europe-west1.firebasedatabase.app",
-			projectId: "emsd-cef45",
-			storageBucket: "emsd-cef45.firebasestorage.app",
-			messagingSenderId: "573007211940",
-			appId: "1:573007211940:web:651a9d8785eb14a0ea2531"
+  apiKey: "AIzaSyDUO5c-1RSGpGspdAStcGmrEVb0qD0FbnU",
+  authDomain: "emsd-cef45.firebaseapp.com",
+  databaseURL: "https://emsd-cef45-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "emsd-cef45",
+  storageBucket: "emsd-cef45.firebasestorage.app",
+  messagingSenderId: "573007211940",
+  appId: "1:573007211940:web:651a9d8785eb14a0ea2531"
         };
 
-        // Initialize Firebase
+        // Inicjalizacja Firebase
         const app = firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
 
-        // Rejestracja użytkownika
-        document.getElementById('registerForm').addEventListener('submit', (e) => {
-            e.preventDefault();
-            const email = document.getElementById('registerEmail').value;
-            const password = document.getElementById('registerPassword').value;
-
-            auth.createUserWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    alert('User registered successfully!');
-                })
-                .catch((error) => {
-                    alert(error.message);
-                });
+        // Nasłuchuj stanu logowania
+        auth.onAuthStateChanged((user) => {
+            if (user) {
+                // Użytkownik jest zalogowany
+                console.log("Zalogowany jako:", user.email);
+                document.getElementById("loginSection").style.display = "none";
+                document.getElementById("appSection").style.display = "block";
+            } else {
+                // Brak zalogowanego użytkownika
+                console.log("Użytkownik nie jest zalogowany.");
+                document.getElementById("loginSection").style.display = "block";
+                document.getElementById("appSection").style.display = "none";
+            }
         });
 
         // Logowanie użytkownika
-        document.getElementById('loginForm').addEventListener('submit', (e) => {
+        document.getElementById("loginForm").addEventListener("submit", (e) => {
             e.preventDefault();
-            const email = document.getElementById('loginEmail').value;
-            const password = document.getElementById('loginPassword').value;
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
 
             auth.signInWithEmailAndPassword(email, password)
                 .then((userCredential) => {
-                    const user = userCredential.user;
-                    document.getElementById('status').innerText = `Logged in as: ${user.email}`;
+                    console.log("Zalogowano:", userCredential.user.email);
                 })
                 .catch((error) => {
-                    alert(error.message);
+                    console.error("Błąd logowania:", error.message);
+                    document.getElementById("loginError").innerText = error.message;
                 });
         });
 
         // Wylogowanie użytkownika
-        auth.onAuthStateChanged((user) => {
-            if (user) {
-                document.getElementById('status').innerText = `Logged in as: ${user.email}`;
-            } else {
-                document.getElementById('status').innerText = 'Not logged in.';
-            }
+        document.getElementById("logoutButton").addEventListener("click", () => {
+            auth.signOut().then(() => {
+                console.log("Wylogowano.");
+            }).catch((error) => {
+                console.error("Błąd wylogowania:", error.message);
+            });
         });
     </script>
 </body>
