--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         <button id="logoutButton">Logout</button>
     </div>
 
-    <script>
+ <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
         // Konfiguracja Firebase
         const firebaseConfig = {
   apiKey: "AIzaSyDUO5c-1RSGpGspdAStcGmrEVb0qD0FbnU",
