--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="pages/employees.html" target="content-frame">Pracownicy</a>
+        <a href="pages/employees.html" target="content-frame">Employee</a>
         <a href="pages/stations.html" target="content-frame">Stacje</a>
         <a href="pages/schedule.html" target="content-frame">Harmonogram</a>
         <a href="pages/performance.html" target="content-frame">Wydajności</a>
