--- a/pages/stations.html
+++ b/pages/stations.html
@@ -43,25 +43,25 @@
 <body>
 
     <div class="form-container">
-        <label for="station-name">Dodaj stację:</label>
-        <input type="text" id="station-name" placeholder="Wpisz nazwę stacji">
-        <label for="station-group">Grupa:</label>
-        <input type="text" id="station-group" placeholder="Wpisz nazwę grupy">
-        <label for="station-limit">Limit pracowników:</label>
-        <input type="number" id="station-limit" placeholder="Wpisz limit" min="1" value="1">
-        <label for="station-hour-limit">Limit godzin na pracownika:</label>
-        <input type="number" id="station-hour-limit" placeholder="Wpisz limit godzin" min="1" value="1">
-        <button id="add-station">Dodaj Stację</button>
+        <label for="station-name">Add Station:</label>
+        <input type="text" id="station-name" placeholder="Enter station name">
+        <label for="station-group">Group:</label>
+        <input type="text" id="station-group" placeholder="Enter group name">
+        <label for="station-limit">Employee Limit:</label>
+        <input type="number" id="station-limit" placeholder="Enter limit" min="1" value="1">
+        <label for="station-hour-limit">Hours per Employee:</label>
+        <input type="number" id="station-hour-limit" placeholder="Enter hours limit" min="1" value="1">
+        <button id="add-station">Add Station</button>
     </div>
 
     <table>
         <thead>
             <tr>
-                <th>Stacja</th>
-                <th>Grupa</th>
-                <th>Limit pracowników</th>
-                <th>Limit godzin/pracownik</th>
-                <th>Usuń</th>
+                <th>Station</th>
+                <th>Group</th>
+                <th>Employee Limit</th>
+                <th>Hours per Employee</th>
+                <th>Remove</th>
             </tr>
         </thead>
         <tbody id="station-table">
@@ -69,7 +69,23 @@
         </tbody>
     </table>
 
-    <script>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+        import { getDatabase, ref, set, onValue, remove, push } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-database.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyDUO5c-1RSGpGspdAStcGmrEVb0qD0FbnU",
+            authDomain: "emsd-cef45.firebaseapp.com",
+            databaseURL: "https://emsd-cef45-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "emsd-cef45",
+            storageBucket: "emsd-cef45.appspot.com",
+            messagingSenderId: "573007211940",
+            appId: "1:573007211940:web:651a9d8785eb14a0ea2531"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const database = getDatabase(app);
+
         const addStationButton = document.getElementById('add-station');
         const stationNameInput = document.getElementById('station-name');
         const stationGroupInput = document.getElementById('station-group');
@@ -77,28 +93,49 @@
         const stationHourLimitInput = document.getElementById('station-hour-limit');
         const stationTable = document.getElementById('station-table');
 
-        // Load stations from localStorage
         function loadStations() {
-            const stations = JSON.parse(localStorage.getItem('stations')) || [];
-            stations.forEach(station => addStationRow(station));
-        }
+            const stationsRef = ref(database, 'stations');
+            onValue(stationsRef, (snapshot) => {
+                const stations = snapshot.val();
+                stationTable.innerHTML = '';
 
-        // Save stations to localStorage
-        function saveStations() {
-            const rows = stationTable.querySelectorAll('tr');
-            const stations = Array.from(rows).map(row => {
-                return {
-                    name: row.cells[0].textContent,
-                    group: row.cells[1].textContent,
-                    limit: row.cells[2].textContent,
-                    hourLimit: row.cells[3].textContent
-                };
+                if (stations) {
+                    Object.keys(stations).forEach((id) => {
+                        addStationRow(id, stations[id]);
+                    });
+                }
             });
-            localStorage.setItem('stations', JSON.stringify(stations));
         }
 
-        // Make a cell editable
-        function makeCellEditable(cell) {
+        function saveStation(id, station) {
+            set(ref(database, `stations/${id}`), station);
+        }
+
+        function addStationRow(id, station) {
+            const row = document.createElement('tr');
+
+            row.innerHTML = `
+                <td>${station.name}</td>
+                <td>${station.group}</td>
+                <td class="editable" data-key="limit">${station.limit}</td>
+                <td class="editable" data-key="hourLimit">${station.hourLimit}</td>
+                <td><button class="remove-station">Remove</button></td>
+            `;
+
+            stationTable.appendChild(row);
+
+            const removeButton = row.querySelector('.remove-station');
+            removeButton.addEventListener('click', () => {
+                remove(ref(database, `stations/${id}`));
+            });
+
+            const editableCells = row.querySelectorAll('.editable');
+            editableCells.forEach((cell) => {
+                cell.addEventListener('click', () => makeCellEditable(cell, id, station));
+            });
+        }
+
+        function makeCellEditable(cell, id, station) {
             const originalContent = cell.textContent;
             const input = document.createElement('input');
             input.value = originalContent;
@@ -108,40 +145,18 @@
 
             input.addEventListener('blur', () => {
                 const newValue = input.value.trim();
+                const key = cell.getAttribute('data-key');
+                if (newValue && newValue !== originalContent && key) {
+                    station[key] = newValue;
+                    saveStation(id, station);
+                }
                 cell.textContent = newValue || originalContent;
-                saveStations();
             });
 
             input.addEventListener('keydown', (e) => {
                 if (e.key === 'Enter') {
                     input.blur();
                 }
-            });
-        }
-
-        // Add station row
-        function addStationRow(station) {
-            const row = document.createElement('tr');
-
-            row.innerHTML = `
-                <td>${station.name}</td>
-                <td>${station.group}</td>
-                <td class="editable">${station.limit}</td>
-                <td class="editable">${station.hourLimit}</td>
-                <td><button class="remove-station">Usuń</button></td>
-            `;
-
-            stationTable.appendChild(row);
-
-            const removeButton = row.querySelector('.remove-station');
-            removeButton.addEventListener('click', () => {
-                row.remove();
-                saveStations();
-            });
-
-            const editableCells = row.querySelectorAll('.editable');
-            editableCells.forEach(cell => {
-                cell.addEventListener('click', () => makeCellEditable(cell));
             });
         }
 
@@ -152,26 +167,25 @@
             const stationHourLimit = stationHourLimitInput.value.trim();
 
             if (stationName && stationGroup && stationLimit && stationHourLimit) {
+                const stationsRef = ref(database, 'stations');
+                const newStationRef = push(stationsRef);
                 const station = {
                     name: stationName,
                     group: stationGroup,
                     limit: stationLimit,
                     hourLimit: stationHourLimit
                 };
-
-                addStationRow(station);
-                saveStations();
+                set(newStationRef, station);
 
                 stationNameInput.value = '';
                 stationGroupInput.value = '';
                 stationLimitInput.value = '1';
                 stationHourLimitInput.value = '1';
             } else {
-                alert('Wprowadź wszystkie dane stacji!');
+                alert('Please enter all station details!');
             }
         });
 
-        // Load stations on page load
         loadStations();
     </script>
 </body>
