--- a/pages/stations.html
+++ b/pages/stations.html
@@ -9,6 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 1em;
+			font-size: 0.8em;
         }
         h2 {
             text-align: center;
