--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -60,10 +60,6 @@
         .drop-target.selected {
             background-color: #ffcccb;
         }
-        .station-name {
-            cursor: pointer;
-            font-weight: bold;
-        }
         .assigned-employee {
             cursor: pointer;
             font-weight: normal;
@@ -88,7 +84,7 @@
             <thead>
                 <tr>
                     <th>G</th>
-                    <th>Station / Hour</th>
+                    <th style="white-space: nowrap;">Station / Hour</th>
                     <th class="hour-cell">08:00 - 09:00</th>
                     <th class="hour-cell">09:00 - 10:00</th>
                     <th class="hour-cell">10:00 - 11:00</th>
@@ -191,10 +187,20 @@
         function renderScheduleTable() {
             scheduleTable.innerHTML = '';
 
-            Object.keys(stationsData).forEach(stationId => {
+            const sortedStations = Object.keys(stationsData).sort((a, b) => {
+                const groupA = stationsData[a].group || '';
+                const groupB = stationsData[b].group || '';
+
+                if (groupA === groupB) {
+                    return stationsData[a].name.localeCompare(stationsData[b].name);
+                }
+                return groupA.localeCompare(groupB);
+            });
+
+            sortedStations.forEach(stationId => {
                 const station = stationsData[stationId];
                 const row = document.createElement('tr');
-                row.innerHTML = `<td>${station.group || ''}</td><td class="station-name" data-station="${station.name}">${station.name}</td>` +
+                row.innerHTML = `<td>${station.group || ''}</td><td class="station-name" data-station="${station.name}"><strong>${station.name}</strong></td>` +
                     new Array(12).fill(0).map((_, index) => {
                         const hour = index + 8;
                         const employees = (scheduleData[hour] && scheduleData[hour][station.name]?.employees) || [];
