--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="pages/employees.html" target="content-frame">Employees</a>
         <a href="pages/stations.html" target="content-frame">Stations</a>
         <a href="pages/schedule.html" target="content-frame">Schedule</a>
+		<a href="pages/scheduledotyk.html" target="content-frame">Scheduledotyk</a>
         <a href="pages/performance.html" target="content-frame">Wydajności</a>
         <a href="pages/statistics.html" target="content-frame">Statystyki</a>
     </nav>
