--- a/pages/schedulepodswietl.html
+++ b/pages/schedulepodswietl.html
@@ -213,9 +213,8 @@
         function renderScheduleTable() {
             scheduleTable.innerHTML = '';
 
-            const sortedStations = Object.values(stationsData).sort((a, b) => a.group.localeCompare(b.group));
-
-            sortedStations.forEach(station => {
+            Object.keys(stationsData).forEach(stationId => {
+                const station = stationsData[stationId];
                 const row = document.createElement('tr');
 
                 row.innerHTML = `<td>${station.group || ''}</td><td class="station-name" data-station="${station.name}"><strong>${station.name}</strong></td>` +
