--- a/pages/employees.html
+++ b/pages/employees.html
@@ -49,6 +49,10 @@
         .break-highlight {
             background-color: orange;
         }
+        /* Efekt hover */
+        tr:hover {
+            background-color: #AAAAAA;
+        }		
     </style>
 </head>
 <body>
