--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -77,6 +77,10 @@
         th.hour-cell.selected {
             background-color: #ffebcc;
         }
+        /* Efekt hover */
+        tr:hover {
+            background-color: #AAAAAA;
+        }		
     </style>
 </head>
 <body>
