--- a/pages/stations.html
+++ b/pages/stations.html
@@ -36,6 +36,10 @@
             background: transparent;
             text-align: center;
         }
+        /* Efekt hover */
+        tr:hover {
+            background-color: #AAAAAA;
+        }		
     </style>
 </head>
 <body>
