--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="pages/employees.html" target="content-frame">Employees</a>
         <a href="pages/stations.html" target="content-frame">Stations</a>
         <a href="pages/schedule.html" target="content-frame">Schedule</a>
-        <a href="pages/performance.html" target="content-frame">performance</a>
+        <a href="pages/performance.html" target="content-frame">Performance</a>
         <a href="pages/statistics.html" target="content-frame">Statystyki</a>
     </nav>
     <main>
