--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="pages/stations.html" target="content-frame">Stations</a>
         <a href="pages/schedule.html" target="content-frame">Schedule</a>
         <a href="pages/performance.html" target="content-frame">Performance</a>
-        <a href="pages/statistics.html" target="content-frame">Statystyki</a>
+        <a href="pages/statistics.html" target="content-frame">Statistics</a>
     </nav>
     <main>
         <iframe name="content-frame" src="pages/welcome.html"></iframe>
