--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <a href="pages/schedule.html" target="content-frame">Schedule</a>
         <a href="pages/scheduledynamic.html" target="content-frame">Schedule Dynamic</a>
         <a href="pages/performance.html" target="content-frame">Performance</a>
+        <a href="pages/performancedynamic.html" target="content-frame">Performance dynamic</a>
         <a href="pages/statistics.html" target="content-frame">Statistics</a>
+        <a href="pages/statisticsbreaks.html" target="content-frame">Statistics breaks</a>
     </nav>
     <main>
         <iframe name="content-frame" src="pages/welcome.html"></iframe>
